--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,3 +62,23 @@ $backgroundColor: orange;
 selector-h {
   background-image: linear-gradient(red, blue);
 }
+
+//Mobile-first
+@mixin minw($point) {
+  @if $point == 320 {
+    @media (min-width: 20em) { @content; }
+  }
+  @else if $point == 640 {
+    @media (min-width: 40em) { @content; }
+  }
+  @else if $point == 768 {
+    @media (min-width: 47.5em) { @content; }
+  }
+}
+
+header {
+  width: 50px;
+  @include minw(640){
+    background-color: blue;
+  }
+}
